# SzovegesKalandjatek

./: 2.txt  3.txt  5.txt  9.txt  CMakeLists.txt  README.md  almodu_adat.h  almodul_adat.c  almodul_csata.c  almodul_csata.h  almodul_kiiras.c  almodul_kiiras.h  almodul_menuk.c  almodul_menuk.h  kalandjatek.cbp  main.c  yay.cbp
